--- a/package.json
+++ b/package.json
@@ -18,7 +18,12 @@
 	},
 	"dependencies": {
 		"body-parser": "^1.19.0",
+		"dotenv": "^10.0.0",
 		"express": "^4.17.1",
+		"module-alias": "^2.2.2",
 		"mongoose": "^6.0.13"
+	},
+	"_moduleAliases": {
+		"@": "src"
 	}
 }
