--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"body-parser": "^1.19.0",
 		"dotenv": "^10.0.0",
 		"express": "^4.17.1",
+		"googleapis": "^39.2.0",
 		"module-alias": "^2.2.2",
 		"mongoose": "^6.0.13"
 	},
