--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
 		"strict": true,
 		"skipLibCheck": true,
 		"baseUrl": ".",
-		"noImplicitAny": false,
+		"noImplicitAny": true,
 		"paths": {
 			"@/*": ["src/*"]
 		}
