--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
 		"body-parser": "^1.19.0",
 		"dotenv": "^10.0.0",
 		"express": "^4.17.1",
+		"express-session": "^1.17.2",
 		"googleapis": "^39.2.0",
 		"module-alias": "^2.2.2",
-		"mongoose": "^6.0.13"
+		"mongoose": "^6.0.13",
+		"passport": "^0.5.0",
+		"passport-auth0": "^1.4.1"
 	},
 	"_moduleAliases": {
 		"@": "src"
