--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"typescript": "^4.5.2"
 	},
 	"dependencies": {
+		"auth0": "^2.37.0",
 		"body-parser": "^1.19.0",
 		"dotenv": "^10.0.0",
 		"express": "^4.17.1",
