--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
 		"typescript": "^4.5.2"
 	},
 	"dependencies": {
-		"auth0": "^2.37.0",
 		"body-parser": "^1.19.0",
 		"cors": "^2.8.5",
 		"dotenv": "^10.0.0",
@@ -25,9 +24,7 @@
 		"express-session": "^1.17.2",
 		"googleapis": "^39.2.0",
 		"module-alias": "^2.2.2",
-		"mongoose": "^6.0.13",
-		"passport": "^0.5.0",
-		"passport-auth0": "^1.4.1"
+		"mongoose": "^6.0.13"
 	},
 	"_moduleAliases": {
 		"@": "src"
