--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
 	"devDependencies": {
 		"@types/express": "^4.17.13",
 		"@types/mongoose": "^5.11.97",
-		"ts-node-dev": "^1.1.8",
 		"typescript": "^4.5.2"
 	},
 	"dependencies": {
@@ -24,7 +23,8 @@
 		"express-session": "^1.17.2",
 		"googleapis": "^39.2.0",
 		"module-alias": "^2.2.2",
-		"mongoose": "^6.0.13"
+		"mongoose": "^6.0.13",
+		"ts-node-dev": "^1.1.8"
 	},
 	"_moduleAliases": {
 		"@": "src"
